@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.5.4
 ----------------------------------------------------------------------
-   4 Enhancements
+   5 Enhancements
    0 Bug fix
    1 Localisation update
 ----------------------------------------------------------------------
@@ -22,6 +22,9 @@ is set, it is reset to 10 seconds.
 
   - Load translations from sources as default translations
   http://sourceforge.net/support/tracker.php?aid=3524017
+
+  - The File Filters dialog can now be resized, as well as its
+sub-dialogs
 
   Localisation updates:
 
